Fix bug with align items, modify buttons width and container padding

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,7 @@ body {
 
 .container {
   margin: 0 auto;
-  padding-top: 15vh;
+  padding: 15vh;
   height: 100vh;
   text-align: center;
 }
@@ -28,7 +28,7 @@ header {
 }
 
 .buttons {
-  width: 900px;
+  width: 100%;
   height: auto;
   margin-top: 50px;
   text-align: center;
